--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,15 +31,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Create build directory
+        run: mkdir build
       - name: Copy CSS
         run: cp assets/css/styles.css build/
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload entire repository
-          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
